# kde-notch

./: CMakeLists.txt  README.md  install.sh  main.cpp  mpris.h  notch-window.qml
package/: metadata.json
package/contents/config/: main.xml
package/contents/ui/: configGeneral.qml  main.qml
